Co-authored-by: Gurman Singh <29th-pixel@users.noreply.github.com>

--- a/src/components/mediaQueries.css
+++ b/src/components/mediaQueries.css
@@ -120,7 +120,8 @@
     .follow1{
         display: flex;
         justify-content: center;
-        gap: 200px;
+        /* width: 1024px ; */
+        /* gap: 200px; */
     }
     /* startIvesting */
     .investContainer{
@@ -235,7 +236,7 @@
     }
     /* NavBottom */
     .nav-bottom-container{
-        width: 1024px;
+        width: 100%;
         height: 52px;
         box-sizing: border-box;
     }
