--- a/src/components/Navbottom.css
+++ b/src/components/Navbottom.css
@@ -6,7 +6,7 @@
     align-items: center;
     padding: 10px;
     gap: 10px; 
-    width: 1440px;
+    width: auto;
     height: 52px;
     background: #F7F7F7;
     border-radius: 6px; 
