--- a/src/components/stylingSheet.css
+++ b/src/components/stylingSheet.css
@@ -70,9 +70,9 @@ color: #FFFFFF;
 flex-direction: row;
 justify-content: center;
 align-items: center;
-padding: 32px 242px;
+padding: 32px 24px;
 gap: 256px;
-width: 1377px;
+width: auto;
 height: 181px;
 }
 .flexContainer{
