--- a/src/components/FootPage.css
+++ b/src/components/FootPage.css
@@ -5,7 +5,7 @@
 display: flex;
 justify-content: space-between;
 align-items: flex-start;
-width: 1440px;
+width: 100%;
 height: 584px;
 padding: 100px 70px 70px 70px;
 
