--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,7 +6,7 @@ justify-content: space-between;
 align-items: center;
 padding: 0px 72px;
 gap: 359px;
-width: 1440px;
+width: 100%;
 height: 80px;
 background: #FFFFFF;
 box-sizing: border-box;
