--- a/src/components/stylingSheet.css
+++ b/src/components/stylingSheet.css
@@ -6,7 +6,7 @@
   align-items: center;
   padding: 100px 72px;
   gap: 32px;
-  width: 1440px;
+  width: 100%;
   height: 760px;
   border: 1px solid black;
   border-radius: 0px 0px 80px 80px;
