--- a/src/components/mediaQueryMob.css
+++ b/src/components/mediaQueryMob.css
@@ -295,5 +295,29 @@
         height: 15px;
         font-size: 8px !important;
     }
-
+    .footContainer{
+        width: 100% !important;
+        height: 687px !important;
+        flex-wrap: wrap;
+        font-weight: 400 !important;
+        font-size: 16px !important;
+        line-height: 21px !important;
+        padding: 40px 10px !important;
+    }
+    .fixedContainer1{
+        width: 327px;
+        height: 316px;
+    }
+    .talkContainer{
+        display: flex;
+        flex-direction: column;
+        order: 20;
+        width: 327px;
+        height: 113px;
+    }
+    .foot1{
+        width: 327px;
+        height: 171px;
+        
+    }
 }
