--- a/src/components/mediaQueryMob.css
+++ b/src/components/mediaQueryMob.css
@@ -299,14 +299,24 @@
         width: 100% !important;
         height: 687px !important;
         flex-wrap: wrap;
+        justify-content: center !important;
+        align-items: center !important;
         font-weight: 400 !important;
         font-size: 16px !important;
         line-height: 21px !important;
-        padding: 40px 10px !important;
+        /* padding: 40px 10px !important; */
     }
     .fixedContainer1{
         width: 327px;
         height: 316px;
+    }
+    .fixedContainer2{
+        display: flex;
+        flex-wrap: wrap;
+        width: 375px;
+        height: 150px;
+        gap: 40px;
+        
     }
     .talkContainer{
         display: flex;
