--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -58,7 +58,7 @@ height: 80px;
     padding: 16px;
     gap: 10px;
     box-sizing: border-box;
-    width: 212px;
+    width: auto;
     height: 53px;
     background: #121B64;
     border-radius: 32px;
@@ -68,4 +68,93 @@ height: 80px;
     font-size: 12px;
     line-height: 21px;
     color:#FFFFFF
+}
+.hamburger{
+    display: none;
+    visibility: hidden;
+}
+/* .investContainer{
+    width: 100%;
+    height: 75px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 72px;
+} */
+/* .hamburgerContainer{
+    display: none;
+    visibility: hidden;
+} */
+@media (max-width:1440px)
+{
+    .hamburger{
+        display: none;
+        visibility: hidden;
+    }
+}
+@media (max-width:1024px) {
+    .nav-frame-2,.nav-frame-3{
+        display: none;
+        visibility: hidden;
+    }
+    .nav-frame-1{
+        justify-content: flex-start !important;
+    }
+    .investContainer{
+        display: none;
+        visibility: hidden;
+    }
+    .hamburger{
+        display: block !important;
+        visibility: visible !important;
+        height: 10px;
+        width: 10px;
+        font-family: 'Jost','sans-serif';
+    }
+    .hamburgerContainer{
+        width: auto;
+        height: 1296px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 20px 40px;
+    }
+    .hamFrame1{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 80px;
+        width: 80%;
+        font-family: 'Jost',sans-serif;
+        font-style: normal;
+        box-sizing: border-box;
+        font-weight: 500;
+        font-size: 28px;
+        line-height: 36px;
+    }
+    .hamBtn{
+        display: flex;
+        width: 80%;
+        height: 58px;
+        background: #121B64;
+        border-radius: 32px;
+        align-items: center;
+        color: #FFFFFF;
+    }
+    .hamBtn-Content{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+}
+@media (max-width:700px) {
+    .hamburgerContainer{
+        width: 375px !important;
+        height: 762px !important;
+    }
+    .hamFrame1{
+        font-size: 20px;
+        line-height: 26px;
+    }
 }
